@@ -2,6 +2,7 @@
 # Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
 
 requires "Exporter" => "0";
+requires "File::Which" => "0";
 requires "IO::File" => "0";
 requires "XSLoader" => "0";
 requires "parent" => "0";
